force-app/main/default/objects/Loop__Document_Request__c/Loop__Document_Request__c.object-meta.xml
<CustomObject>
    <description>Document Queue for DDPs</description>
    <label>Document Request</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>