force-app/main/default/objects/Loop__Document_Request__c/fields/Loop__Contact__c.field-meta.xml
<CustomField>
    <fullName>Loop__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>Document_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>