force-app/main/default/objects/Loop__Document_Request__c/fields/Loop__Document_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Loop__Document_Name_Link__c</fullName>
    <formula>IF(Loop__Document_Id__c &lt;&gt; &quot;&quot;, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Loop__Document_Id__c , Loop__Document_Name__c, &quot;_blank&quot;),  CASE( Loop__Status__c , &quot;Pending&quot;, &quot;&quot;, &quot;Error&quot;, &quot;&quot;, Loop__Document_Name__c) )</formula>
    <label>Document Name</label>
    <type>Text</type>
</CustomField>