force-app/main/default/objects/Loop__Document_Request__c/fields/Loop__Email__c.field-meta.xml
<CustomField>
    <fullName>Loop__Email__c</fullName>
    <formula>IF (Loop__Email_Link__c &lt;&gt; &quot;&quot;, HYPERLINK(Loop__Email_Link__c, &quot;Email&quot;,&quot;_self&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>