force-app/main/default/objects/Loop__Document_Request__c/fields/Loop__Status__c.field-meta.xml
<CustomField>
    <fullName>Loop__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Looped</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>