force-app/main/default/objects/Loop__Document_Request__c/listViews/Loop__All.listView-meta.xml
<ListView>
    <fullName>Loop__All</fullName>
    <columns>NAME</columns>
    <columns>Loop__Document_Name_Link__c</columns>
    <columns>Loop__Email__c</columns>
    <columns>Loop__LOOP__c</columns>
    <columns>Loop__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>